# Telescope

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY_TEST_PLAN_FRAMEWORK.md  SECURITY_TEST_PLAN_SUMMARY.txt  SKILLS.md  UX_ANALYSIS.md  UX_IMPLEMENTATION_REPORT.md  package-lock.json  package.json  pnpm-lock.yaml  test-strategy-security-issues.md
.claude/: todos.db
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  retro-required.md
.github/agents/: squad.agent.md
.github/workflows/: AGENTS.md  build-desktop.yml  ci.yml  docs.yml  integration.yml  release.yml  squad-heartbeat.yml  squad-issue-assign.yml  sync-squad-labels.yml
.squad/: config.json  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/kane/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: dallas-architecture-doc-current-state.md  dallas-ghpages-structure.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 20260324-000000-ai-insights-planning.md  20260324-040000-ai-insights-execution-start.md  20260324-060000-ai-insights-task3-completion.md  20260401-040650-planning-consolidation.md
.squad/orchestration-log/: 20260324-000000-dallas.md  20260324-000000-kane.md  20260324-000000-lambert.md  20260324-000000-ripley.md  20260324-010000-ripley.md  20260324-011500-lambert.md  20260324-013000-kane.md  20260324-014500-dallas.md  20260324-020000-ripley.md  20260324-021500-dallas.md  20260324-023000-dallas.md  20260324-024500-kane.md  20260324-030000-ripley.md  20260324-031500-dallas.md  20260324-033000-dallas.md  20260324-034500-kane.md  20260324-050000-ripley.md  20260324-051500-kane.md  20260401-040650-scribe.md
.squad/skills/e2e-validation-suite/: SKILL.md
.squad/skills/polling-interval-consistency/: SKILL.md
.squad/templates/: ceremonies.md  constraint-tracking.md  copilot-instructions.md  mcp-config.md  plugin-marketplace.md  roster.md  routing.md  run-output.md  scribe-charter.md  squad.agent.md
.squad/templates/workflows/: squad-heartbeat.yml  squad-insider-release.yml  squad-issue-assign.yml  squad-label-enforce.yml  squad-preview.yml  squad-promote.yml  squad-release.yml  squad-triage.yml
apps/desktop/: AGENTS.md  index.html  package.json  tauri.conf.json
apps/desktop/icons/: README.md  icon.icns
apps/desktop/scripts/: prepare-frontend.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/hub/: AGENTS.md  Cargo.toml  Dockerfile  README.md
apps/hub/src/: auth.rs  main.rs  routes.rs  state.rs  ws.rs
apps/web/: AGENTS.md  README.md  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/web/src/lib/: api.test.ts  api.ts  azure-utils.test.ts  azure-utils.ts  engine.ts  error-suggestions.test.ts  error-suggestions.ts  hello.test.ts  hello.ts  insights.test.ts  insights.ts  metrics-format.test.ts  metrics-format.ts  preferences.ts  prod-detection.test.ts  prod-detection.ts  realMetrics.test.ts  realMetrics.ts  resource-routing.ts  stores.ts  tauri-commands.ts  version.test.ts  version.ts
apps/web/src/lib/components/: AksAddons.svelte  AppHeader.svelte  AzureIdentitySection.svelte  Breadcrumbs.svelte  ClusterVitals.svelte  ConfirmDialog.svelte  ConnectionStatus.svelte  ContextBanner.svelte  ContextSwitcher.svelte  ErrorMessage.svelte  EventsTable.svelte  ExecTerminal.svelte  FilterBar.svelte  LoadingSkeleton.svelte  LogViewer.svelte  NodePoolHeader.svelte  PodTable.svelte  PortForwardDialog.svelte  ResourceTable.svelte  ScaleDialog.svelte  SearchPalette.svelte  ShortcutHelp.svelte  Sidebar.svelte  Sparkline.svelte  Tabs.svelte  ThemeToggle.svelte  YamlEditor.svelte
apps/web/src/lib/icons/: Icon.svelte  README.md  action-icons.ts  index.ts  resource-icons.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
apps/web/tests-e2e/: clusters.spec.ts  detail-reload.spec.ts  error-states.spec.ts  explore.spec.ts  helm-uninstall.spec.ts  insights.spec.ts  node-pools.spec.ts  p2-routes.spec.ts  resources.spec.ts  search-palette.spec.ts  settings.spec.ts  smoke.spec.ts
apps/web/tests-e2e/fixtures/: clusters.json
apps/web/tests-e2e/helpers/: mock-tauri.ts
apps/web/tests-e2e/stub/: stub-server.mjs
crates/: AGENTS.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/azure/: Cargo.toml
crates/azure/src/: aks.rs  client.rs  error.rs  lib.rs  openai.rs  resolve.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: connection.rs  insights_history.rs  lib.rs  store.rs  trusted_binary.rs
crates/engine/: Cargo.toml
crates/engine/src/: actions.rs  audit.rs  client.rs  crd.rs  dynamic.rs  error.rs  exec.rs  helm.rs  insights.rs  insights_context.rs  kubeconfig.rs  lib.rs  logs.rs  metrics.rs  namespace.rs  node_ops.rs  portforward.rs  secrets.rs  validation.rs  watcher.rs
crates/engine/tests/: common.rs  dynamic_crd.rs  exec_and_logs.rs  integration_k3d.rs  portforward.rs  watchers_smoke.rs
docs/: AGENTS.md  AKS_QUICKSTART.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOPILOT_SECURITY_REVIEW_PROMPT.md  DEPLOYMENT.md  DEVELOPMENT.md  ENTRA_AUTH_FEASIBILITY.md  FEATURES.md  Gemfile  PRD.md  ROADMAP.md  SECURITY.md  SMOKE_TEST.md  TESTING.md  TEST_PLAN.md  UX_NOTES.md  _config.yml  ev-signing.md  index.md
docs/diagrams/: architecture.md
docs/retrospectives/: 2026-03-24-ai-insights-implementation.md  MILESTONE-M0-foundations.md  README.md
scripts/: check-no-emoji.mjs  dev-test.sh  k3d-setup.sh  k3d-teardown.sh  measure-memory.sh  pnpm.sh  smoke-test.sh  test-ai-connection.sh
tools/devtest/: Dockerfile
tools/k3d-fixtures/: configmap.yaml  failing-pod.yaml  namespace.yaml  nginx-deployment.yaml  service.yaml  test-namespace-workload.yaml
(+49 files in other folders)
