[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/engine",
  "crates/api",
  "apps/desktop/src-tauri",
  "apps/hub"
]
# CI defaults: avoid building platform-specific desktop dependencies on Linux.
# Desktop builds run in their own GH Actions job on Windows/macOS.
default-members = [
  "crates/core",
  "crates/engine",
  "crates/api",
  "apps/hub"
]

[workspace.package]
edition = "2021"
license = "MIT"
