[package]
name = "telescope-hub"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
telescope-engine = { path = "../../crates/engine" }
telescope-core = { path = "../../crates/core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
kube = { version = "3.0.1", features = ["client", "config"] }
base64 = "0.22"
