[package]
name = "telescope-azure"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
azure_identity = "0.22"
azure_core = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telescope-core = { path = "../core" }
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
thiserror = "2"
