[package]
name = "telescope-azure"
version = "1.0.3"
edition.workspace = true
license.workspace = true

[dependencies]
azure_identity = { version = "0.22", default-features = false, features = ["reqwest_rustls", "old_azure_cli"] }
azure_core = { version = "0.22", default-features = false, features = ["reqwest_rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telescope-core = { path = "../core" }
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
thiserror = "2"
