[package]
name = "telescope-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.0.1", features = ["client", "config", "runtime", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
telescope-core = { path = "../core" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
