[package]
name = "telescope-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
flate2 = "1.1"
futures = "0.3.32"
http = "1"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.0.1", features = ["client", "config", "runtime", "derive", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
telescope-core = { path = "../core" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
