[package]
name = "telescope-desktop"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telescope-engine = { path = "../../../crates/engine" }
telescope-core = { path = "../../../crates/core" }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
