[package]
name = "telescope-desktop"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures = "0.3"
kube = { version = "3.0.1", features = ["client"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telescope-engine = { path = "../../../crates/engine" }
telescope-core = { path = "../../../crates/core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
