[package]
name = "telescope-desktop"
version = "1.0.3"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
futures = "0.3"
kube = { version = "3.0.1", features = ["client"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
telescope-engine = { path = "../../../crates/engine" }
telescope-core = { path = "../../../crates/core" }
telescope-azure = { path = "../../../crates/azure" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
